--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <body class="text-center">
 
 <main class="form-signin">
-  <form action="/memes" method="POST">
+  <form action="/" method="POST">
     <h1 class="h3 mb-3 fw-normal"><b>Meme Stream</b></h1>
     <br>
     <br>
